--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,11 @@ h3{
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     border: 1px solid green;
+    border-radius: 20px;
+    padding: 1rem;
 }
 
+/* Individual cell styling */
 .cell{
     width: 100%;
     height: 10.41rem;
@@ -42,9 +45,37 @@ h3{
     font-size: 10rem;
     text-align: center;
     background-color: black;
-    border: 1px solid green;
     grid-template-columns: repeat(3, 1fr);
     cursor: pointer;
+}
+
+#cell-0{
+    border-bottom: 1px solid green;
+    border-right: 1px solid green;
+}
+#cell-1{
+    border-bottom: 1px solid green;
+    border-right: 1px solid green;
+}
+#cell-2{
+    border-bottom: 1px solid green;
+}
+#cell-3{
+    border-bottom: 1px solid green;
+    border-right: 1px solid green;
+}
+#cell-4{
+    border-bottom: 1px solid green;
+    border-right: 1px solid green;
+}
+#cell-5{
+    border-bottom: 1px solid green;
+}
+#cell-6{
+    border-right: 1px solid green;
+}
+#cell-7{
+    border-right: 1px solid green;
 }
 
 .player-container, .status-message{
@@ -58,6 +89,8 @@ h3{
 #messages{
     overflow-y: auto;
     max-height: 450px;
+    display: flex;
+    flex-direction: column;
 }
 #messages p{
     padding: .25rem 0rem;
@@ -82,4 +115,8 @@ h3{
     font-size: 2rem;
     font-weight: bold;
     border: 1px solid green
+}
+
+.highlight{
+    background-color: yellowgreen;
 }
