--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,27 @@
+/*Pixel font*/
+@font-face {
+    font-family: pixel;
+    src: url(assets/Press_Start_2P/PressStart2P-Regular.ttf);
+}
+
+@font-face {
+    font-family: pixelCells;
+    src: url(assets/VT323/VT323-Regular.ttf);
+}
+
 /* Basic Reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: pixel, 'Courier New', Courier, monospace;
     background-color: black;
     color: green;   
 }
 
 header{
     color:green;
+    padding: .75rem 0rem;
     text-align: center;
     font-size: 3rem;
     font-weight: bolder;
@@ -39,6 +51,7 @@ h3{
 
 /* Individual cell styling */
 .cell{
+    font-family: pixelCells, 'Courier New', Courier, monospace;
     width: 100%;
     height: 10.41rem;
     color: green;
@@ -83,7 +96,7 @@ h3{
 }
 
 #player-info{
-    padding-top: 1rem;
+    padding: 1rem 0rem;
 }
 
 #messages{
@@ -93,12 +106,15 @@ h3{
     flex-direction: column;
 }
 #messages p{
-    padding: .25rem 0rem;
-    border-bottom:1px solid green ;
+    padding: .50rem 0rem;
 }
 
 .cell:hover{
     background-color: #333333;
+}
+
+.scorecard{
+    font-size: .90rem;
 }
 
 .button-container{
@@ -110,11 +126,15 @@ h3{
 #reset-button{
     text-align: center;
     cursor: pointer;
-    width: 9rem;
-    height: 3rem;
+    width: 13rem;
+    height: 4rem;
     font-size: 2rem;
     font-weight: bold;
     border: 1px solid green
+}
+
+#reset-button:hover{
+    background-color: #333333;
 }
 
 .highlight{
